--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CIPHER GEL</title>
 
     <!-- icon -->
-    <link rel="shortcut icon" href="images/icon.webp" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/x-icon" />
 
     <!-- File CSS -->
     <link rel="stylesheet" href="css/style.css" />
