--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CIPHER GEL</title>
 
     <!-- icon -->
-    <link rel="shortcut icon" href="images/icon.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/icon.webp" type="image/x-icon" />
 
     <!-- File CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -17,7 +17,7 @@
       <!-- hero Section -->
       <section class="hero">
         <div class="top_img">
-          <img src="images/hero-img.jpg" alt="" />
+          <img src="images/hero-img.webp" alt="" />
         </div>
 
         <div class="content">
@@ -47,7 +47,7 @@
 
           <div class="btn_img">
             <a href="#submit-now"
-              ><img src="images/button1.png" alt="button"
+              ><img src="images/button1.webp" alt="button"
             /></a>
           </div>
         </div>
@@ -56,7 +56,7 @@
 
         <section class="doctor">
 
-        <img class="img2" src="images/btm_doctor.png" alt="">
+        <img class="img2" src="images/btm-doctor.webp" alt="">
 
         <div class="text">
 
@@ -70,7 +70,7 @@
 
           <div class="btn_img">
             <a href="#submit-now">
-              <img src="images/button2.png" alt="button"/>
+              <img src="images/button2.webp" alt="button"/>
             </a>
           </div>
 
@@ -92,10 +92,14 @@
           <h5>ســيفـــر  جيـــــــــــل</h5>
         </div>
 
-        <img class="img_how_work" src="images/dd.jpg" alt="" />
+        <div class="flex_pc">
+          <div class="img_img_work">
+            <img class="img_how_work" src="images/dd.webp" alt="" />
+          </div>
 
 
-        <ul>
+          <div class="text_Work">
+            <ul>
           <li>تتوغـــل مكونـــات سيفر جيـل الـي الانسجــة</li>
           <li>التالفة وتعيد بنائهـا مـن جديد ويعمل علي</li>
           <li>تعقيمهــا وتنظيفهـا جيـدا كمـا يعمـل علـي </li>
@@ -110,8 +114,10 @@
 
         <div class="btn_img">
           <a href="#submit-now"
-            ><img src="images/button1.png" alt="button"
+            ><img src="images/button1.webp" alt="button"
           /></a>
+        </div>
+          </div>
         </div>
       </section>
     </div>
@@ -119,7 +125,7 @@
     <section class="form_section" id="submit-now">
       <div class="price">
         <div class="img_price">
-          <img src="images/top-form.jpg" alt="" />
+          <img src="images/top-form.webp" alt="" />
         </div>
       </div>
 
