--- a/thanksPage.html
+++ b/thanksPage.html
@@ -66,7 +66,8 @@
         width: max-content;
         margin: 0 auto;
         border-radius: 12px;
-        padding: 0px 11px 2px 60px;
+        padding: 0px 11px 2px;
+        text-align: center;
       }
       .thanks_page p {
         font-size: 13px;
@@ -75,7 +76,7 @@
         width: max-content;
         margin: 0 auto 15px;
         border-radius: 0px;
-        padding: 1px 8px 3px 60px;
+        padding: 1px 8px 3px;
       }
       .thanks_page .text {
         position: relative;
@@ -84,7 +85,7 @@
         right: -10px;
       }
       .thanks_page .div_btn {
-        margin-top: 40px;
+        margin-top: 30px;
       }
       .thanks_page .div_btn a {
         background: linear-gradient(-50deg,#F67C1C,#F43918 );
