--- a/thanksPage.html
+++ b/thanksPage.html
@@ -52,7 +52,7 @@
 
       /* Start Thanks Page Section */
       body.thanks_page_page {
-        background: url(images/thanks.jpg) center/cover;
+        background: url(images/thanks.webp) center/cover;
         min-height: 100vh;
       }
       .thanks_page {
